2009-04-16  Xan Lopez  <xlopez@igalia.com>

        Reviewed by Sam Weinig.

        https://bugs.webkit.org/show_bug.cgi?id=25241
        Remove superfluous NotImplemented.h includes.

        * webkit/webkitprivate.cpp:

2009-04-14  Gustavo Noronha Silva  <gustavo.noronha@collabora.co.uk>

        Unreviewed. Update gtk-doc control and base sgml files for 1.1.5.

        * docs/webkitgtk-docs.sgml:
        * docs/webkitgtk-sections.txt:

2009-04-14  Xan Lopez  <xlopez@igalia.com>

        * NEWS: updated for 1.1.5 release.

2009-04-13  Gustavo Noronha Silva  <gustavo.noronha@collabora.co.uk>

        Reviewed by Holger Freyther.

        https://bugs.webkit.org/show_bug.cgi?id=22898
        [GTK] need proper API for printing

        Added simple printing unit tests.

        * tests/testwebframe.c:
        (print_requested_cb):
        (print_timeout):
        (test_webkit_web_frame_printing):
        (main):

2009-04-13  Gustavo Noronha Silva  <gns@gnome.org>

        Reviewed by Holger Freyther.

        https://bugs.webkit.org/show_bug.cgi?id=22898
        [GTK] need proper API for printing

        Implement proper printing API, using the GTK+ printing API.

        * WebCoreSupport/ChromeClientGtk.cpp:
        (WebKit::ChromeClient::print):
        * webkit/webkitprivate.h:
        * webkit/webkitwebframe.cpp:
        * webkit/webkitwebframe.h:
        * webkit/webkitwebview.cpp:

2009-04-10  Gustavo Noronha Silva  <gustavo.noronha@collabora.co.uk>

        Reviewed by Holger Freyther.

        https://bugs.webkit.org/show_bug.cgi?id=25124
        [GTK] many strings still missing translation calls

        Mark the missing strings for translation.

        * webkit/webkitdownload.cpp:
        (_WebKitDownloadPrivate::webkit_download_cancel):
        * webkit/webkitsoupauthdialog.c:
        (show_auth_dialog):
        * webkit/webkitwebhistoryitem.cpp:
        (_WebKitWebHistoryItemPrivate::webkit_web_history_item_class_init):