@@ -30,14 +30,22 @@
 static void test_webkit_web_frame_create_destroy(void)
 {
     WebKitWebView* webView;
-    g_test_bug("21837");
+    GtkWidget *window;
 
+    g_test_bug("21837");
     webView = WEBKIT_WEB_VIEW(webkit_web_view_new());
     g_object_ref_sink(webView);
     g_assert_cmpint(G_OBJECT(webView)->ref_count, ==, 1);
-
     // This crashed with the original version
     g_object_unref(webView);
+
+    g_test_bug("25042");
+    window = gtk_window_new(GTK_WINDOW_TOPLEVEL);
+    webView = WEBKIT_WEB_VIEW(webkit_web_view_new());
+    gtk_container_add(GTK_CONTAINER(window), webView);
+    gtk_widget_show(window);
+    gtk_widget_show(webView);
+    gtk_widget_destroy(webView);
 }
 
 static void test_webkit_web_frame_lifetime(void)
